ecomm/src/components/Pdp.css
.pdp-page {
    padding: 40px 160px 100px 160px;
}

.pdp-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-top: 40px;
    grid-column-gap: 2vw;
    grid-row-gap: 8vw;
}

.pdp-title {
    font-size: 34px;
    font-weight: 500;
    margin: 0 0 15px 0;
}

.pdp-info-container {
    text-align: center;
}

.purchase-button {
    font-size: 18px;
    width: 30%;
    margin: 15px 0;
    padding: 10px;
    cursor: pointer;
    color: #f9f6f6;
    background-color: #a11735;
    border: 2px solid #a8206b;
}

.purchase-button:hover {
    opacity: 80%;
}

.pdp-info-paragraph {
    font-size: 18px;
    margin: 15px 0;
}

.pdp-image {
    width: 100%;
    height: 100%;
    box-shadow: 4px 6px 8px 4px rgba(0,0,0,.4), 0 6px 20px 0 rgba(0,0,0,.19);
}

